syntax = "proto3";
option java_multiple_files = true;
package animal;

message AddAnimalRequest
{
  string species = 1;
  double weight = 2;
}

message EmptyResponse {}

service AnimalService
{
  rpc addAnimal(AddAnimalRequest) returns (EmptyResponse);
}